--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,9 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+
+MYAPP_UPLOAD_STORE_FILE=nimbleilos.keystore
+MYAPP_UPLOAD_KEY_ALIAS=nimbleilos
+MYAPP_UPLOAD_STORE_PASSWORD=cs@india
+MYAPP_UPLOAD_KEY_PASSWORD=cs@india
