--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-btr": "^2.2.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-paper": "^5.10.3",
+    "react-native-paper-dates": "^0.18.27",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
