--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission
+   android:name="android.permission.ACCESS_FINE_LOCATION"
+/>
 
     <application
       android:name=".MainApplication"
@@ -10,6 +13,9 @@
       android:allowBackup="false"
       android:usesCleartextTraffic="true"
       android:theme="@style/AppTheme">
+      <meta-data
+  android:name="com.google.android.geo.API_KEY"
+  android:value="AIzaSyBRNWfeiGXqq11m19ubGjx3DWhhWFutd9s"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
