--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -20,12 +21,17 @@
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-android-location-enabler": "^1.2.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.10.3",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
