--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native": "0.72.4",
     "react-native-android-location-enabler": "^1.2.2",
     "react-native-btr": "^2.2.0",
+    "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-device-info": "^10.8.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-crop-picker": "^0.37.3",
@@ -29,6 +31,7 @@
     "react-native-maps": "^1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-modals": "^0.22.3",
+    "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "^5.10.3",
     "react-native-paper-dates": "^0.18.27",
     "react-native-permissions": "^3.9.1",
@@ -37,7 +40,9 @@
     "react-native-screens": "^3.25.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-toastify": "^0.2.2",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-xml2js": "^1.0.3",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
