--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "^7.6.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.5.0",
@@ -25,6 +26,7 @@
     "react-native-btr": "^2.2.0",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-device-info": "^10.8.0",
+    "react-native-document-picker": "^9.0.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-crop-picker": "^0.37.3",
