--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,8 +78,8 @@ android {
         applicationId "com.nimble"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.2"
     }
     signingConfigs {
         debug {
@@ -113,6 +113,7 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation("com.facebook.react:react-android")
     implementation 'com.facebook.fresco:animated-gif:2.5.0'
     
