--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-step-indicator": "^1.0.3",
     "react-native-toastify": "^0.2.2",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-video": "^5.2.1",
     "react-native-xml2js": "^1.0.3",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
