--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-device-info": "^10.8.0",
     "react-native-document-picker": "^9.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-get-random-values": "^1.10.0",
@@ -43,6 +44,7 @@
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-share": "^10.0.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-step-indicator": "^1.0.3",
     "react-native-toastify": "^0.2.2",
