--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-toastify": "^0.2.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
+    "react-native-webview": "^13.6.3",
     "react-native-xml2js": "^1.0.3",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
